--- a/wordle/package.json
+++ b/wordle/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.18.15",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "firebase": "^9.17.2",
+    "firebase-tools": "^11.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
